# markdown2dash

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  render.sh  requirements.txt
example/: app.py  chart.py  scroll.py  theme.py
example/assets/: styles.css
markdown2dash/: __init__.py
markdown2dash/src/: decorators.py  parser.py  renderer.py  utils.py
markdown2dash/src/directives/: admonition.py  base.py  divider.py  exec.py  image.py  kwargs.py  source.py  toc.py
render/: build.sh  run.sh
tests/: test_basics.py  test_em_strong.py  test_image.py  test_list.py  testutils.py
