[tool.poetry]
name = "markdown2dash"
version = "0.1.0a3"
description = "Render markdown into a dash layout using dash-mantine-components"
authors = ["Snehil Vijay <snehilvj@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snehilvj/markdown2dash"
repository = "https://github.com/snehilvj/markdown2dash"
documentation = "https://github.com/snehilvj/markdown2dash"
keywords = ["dash", "plotly", "documentation", "markdown", "dash-mantine-components", "dmc"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database :: Front-Ends",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Widget Sets",
]

[tool.poetry.dependencies]
python = ">=3.7"
dash = "^2.11.1"
dash-mantine-components = "0.13.0a3"
mistune = "^3.0.1"
jsonpath = "^0.82"
dash-iconify = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
